plugins {
    id("java")
    id("org.springframework.boot") version "3.5.0"
    id("io.spring.dependency-management") version "1.1.7"
}

group = "com.sidebeam"
version = "1.0-SNAPSHOT"
java.sourceCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-aop")
    
    // Jasypt for property encryption (local profile only)
    implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5")

    // Spring Retry (legacy)
    implementation("org.springframework.retry:spring-retry")

    // Resilience4j (resiliency: circuit breaker, retry, bulkhead, reactor support)
    implementation("io.github.resilience4j:resilience4j-spring-boot3:2.3.0")
    implementation("io.github.resilience4j:resilience4j-reactor:2.3.0")

    // YAML Processing
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
    implementation("com.fasterxml.jackson.core:jackson-databind")

    // GitLab API
    implementation("org.gitlab4j:gitlab4j-api:6.0.0-rc.10")
    implementation("jakarta.ws.rs:jakarta.ws.rs-api:4.0.0")

    // JSON Schema Validation
    implementation("org.everit.json:org.everit.json.schema:1.5.1")
    implementation("org.json:json:20250517")

    // Lombok
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    // Mapstruct
    implementation("org.mapstruct:mapstruct:1.6.3")
    annotationProcessor("org.mapstruct:mapstruct-processor:1.6.3")

    // API Documentation
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9")

    // Testing
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation(platform("org.junit:junit-bom:5.13.4"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("com.tngtech.archunit:archunit-junit5:1.3.0")

    // Lombok for tests
    testCompileOnly("org.projectlombok:lombok")
    testAnnotationProcessor("org.projectlombok:lombok")


    // macOS ARM64 전용 DNS 리졸버 (로컬 개발환경용)
    if (System.getProperty("os.name").lowercase().startsWith("mac") &&
        System.getProperty("os.arch") == "aarch64" &&
        !System.getenv("CI").toBoolean()) { // CI 환경이 아닌 경우에만
        runtimeOnly("io.netty:netty-resolver-dns-native-macos:4.1.76.Final:osx-aarch_64")
    }
}

tasks.test {
    useJUnitPlatform()
    // Pass system properties to test JVM
    systemProperties(System.getProperties().toMap() as Map<String, Any>)
}
